--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zero2prod"
+name = "hermes"
 version = "0.1.0"
 edition = "2024"
 
@@ -77,3 +77,6 @@ lettre = { version = "0.11.4", default-features = false, features = [
 rusty-sidekiq = { version = "0.13.2", default-features = false }
 jsonwebtoken = "9.3.1"
 regex = "1.11.1"
+async-trait = "0.1.88"
+once_cell = "1.21.3"
+secrecy = "0.10.3"
