--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ tokio = { version = "1.44.1", features = ["full"] }
 bb8 = { version = "0.9.0" }
 
 # Web & Networking
-axum = { version = "0.8.1" }
 axum-server = { version = "0.7.2" }
-axum-extra = { version = "0.10.1", features = ["cookie"] }
+axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
+axum = { version = "0.8.3", features = ["multipart"] }
 tower = { version = "0.5.2" }
 tower-cookies = { version = "0.11.0" }
 http = "1.1.0"
@@ -35,7 +35,7 @@ serde_variant = { version = "0.1.3" }
 erased-serde = "0.4.6"
 
 # Logging & Tracing
-
+utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
     "env-filter",
