--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-    "crates/common",
-    "crates/udp-ingestor",
-    "crates/location-processor",
-    "crates/auth-service",
-    "crates/driver-service",
-    "crates/rider-service",
-    "crates/matcher",
-    "crates/ride-service",
-    "crates/gateway",
-    "crates/simulation",
-    "crates/notification",
+  "crates/common",
+  "crates/udp-ingestor",
+  "crates/location-processor",
+  "crates/auth-service",
+  "crates/gateway",
+  "crates/simulation",
 ]
 
 [workspace.dependencies]
@@ -19,7 +14,12 @@ tokio = { version = "1.40", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 axum = "0.7"
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
+sqlx = { version = "0.8", features = [
+  "runtime-tokio",
+  "postgres",
+  "uuid",
+  "chrono",
+] }
 redis = { version = "0.27", features = ["tokio-comp"] }
 async-nats = "0.35"
 tracing = "0.1"
