--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,29 +2,81 @@
 resolver = "2"
 members = [
   "crates/common",
-  "crates/udp-ingestor",
-  "crates/location-processor",
-  "crates/auth-service",
-  "crates/gateway",
-  "crates/simulation",
+  "services/auth-service",
+  "services/location-processor",
+  "services/udp-ingestor",
+  "services/gateway",
+  "services/simulation",
 ]
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+authors = ["Bulut Gocer <gocerbulutcan@gmail.com>"]
+license = "MIT"
+
 [workspace.dependencies]
+# Async runtime
 tokio = { version = "1.40", features = ["full"] }
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-axum = "0.7"
+
+# HTTP framework
+axum = { version = "0.7", features = ["macros"] }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["cors", "trace"] }
+
+# Database
 sqlx = { version = "0.8", features = [
   "runtime-tokio",
+  "tls-native-tls",
   "postgres",
   "uuid",
   "chrono",
+  "json",
 ] }
-redis = { version = "0.27", features = ["tokio-comp"] }
+
+# Cache
+redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
+
+# Event bus
 async-nats = "0.35"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-anyhow = "1.0"
-thiserror = "1.0"
+
+# Auth
+jsonwebtoken = "9"
+bcrypt = "0.15"
+
+# Utilities
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
+anyhow = "1.0"
+thiserror = "1.0"
+
+# Observability
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+metrics = "0.23"
+metrics-exporter-prometheus = "0.15"
+
+# Testing
+mockall = "0.13"
+rand = "0.8"
+
+# Async trait
+async-trait = "0.1"
+
+[profile.dev]
+opt-level = 0
+debug = true
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
+
+[profile.test]
+opt-level = 0
+debug = true
