feat: common utils development

--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "common"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true }
 serde_json = { workspace = true }
-uuid = { workspace = true }
 chrono = { workspace = true }
+thiserror = { workspace = true }
+uuid = { workspace = true }
+sqlx = { workspace = true, optional = true }
+redis = { workspace = true, optional = true }
+
+[features]
+default = []
+db = ["sqlx"]
+cache = ["redis"]
