--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # HTTP framework
-axum = { version = "0.7", features = ["macros"] }
-tower = "0.4"
-tower-http = { version = "0.5", features = ["cors", "trace"] }
+axum = { version = "0.8", features = ["macros"] }
+tower = "0.5"
+tower-http = { version = "0.6", features = ["cors", "trace"] }
 
 # Database
 sqlx = { version = "0.8", features = [
@@ -39,30 +39,30 @@ sqlx = { version = "0.8", features = [
 ] }
 
 # Cache
-redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
+redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
 
 # Event bus
-async-nats = "0.35"
+async-nats = "0.44"
 
 # Auth
-jsonwebtoken = "9"
-bcrypt = "0.15"
+jsonwebtoken = "10"
+bcrypt = "0.17"
 
 # Utilities
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
-thiserror = "1.0"
+thiserror = "2.0"
 
 # Observability
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
-metrics = "0.23"
-metrics-exporter-prometheus = "0.15"
+metrics = "0.24"
+metrics-exporter-prometheus = "0.17"
 
 # Testing
-mockall = "0.13"
-rand = "0.8"
+mockall = { version = "0.13" }
+rand = "0.9"
 
 # Async trait
 async-trait = "0.1"
