--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,8 @@ metrics-exporter-prometheus = "0.17"
 
 # Testing
 mockall = { version = "0.13" }
+testcontainers = { version = "0.24.0", features = ["blocking"] }
+testcontainers-modules = { version = "0.12.0", features = ["postgres", "default"] }
 rand = "0.9"
 
 # Async trait
