--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./infra/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./infra/postgres/migrations.sql:/docker-entrypoint-initdb.d/migrations.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U hermes"]
       interval: 5s
