--- a/.env.example
+++ b/.env.example
@@ -1,94 +1,81 @@
-# Hermes Environment Configuration
-# Copy this file to .env and adjust values as needed
+# Discord Clone Environment Configuration
+# Copy this file to .env and update with your values
 
-# =============================================================================
 # Database Configuration
-# =============================================================================
-DATABASE_URL=postgres://hermes:hermes_dev@localhost:5432/hermes
+DATABASE_URL=postgres://discord:discord_dev_password@localhost:5432/discord
 
-# =============================================================================
-# Event Bus (NATS)
-# =============================================================================
+# Redis Configuration
+REDIS_URL=redis://:redis_dev_password@localhost:6379
+
+# NATS Configuration
 NATS_URL=nats://localhost:4222
 
-# =============================================================================
-# Cache (Redis)
-# =============================================================================
-REDIS_URL=redis://localhost:6379
-
-# =============================================================================
-# Logging
-# =============================================================================
-# Options: trace, debug, info, warn, error
-RUST_LOG=info,sqlx=warn
-
-# JSON structured logs (set to 1 for production)
-RUST_LOG_JSON=0
-
-# =============================================================================
-# UDP Ingestor Configuration
-# =============================================================================
-UDP_BIND_ADDR=0.0.0.0:4000
-UDP_MAX_PACKET_SIZE=2048
-TELEMETRY_TOPIC_PREFIX=telemetry
-
-# =============================================================================
-# Location Processor Configuration
-# =============================================================================
-# Maximum idle time before completing route (seconds)
-MAX_IDLE_TIME_SECS=300
-
-# Minimum distance to create segment (meters)
-MIN_SEGMENT_DISTANCE_M=50
-
-# Minimum speed to consider moving (km/h)
-MIN_MOVING_SPEED_KMPH=5
-
-# =============================================================================
-# Gateway Configuration
-# =============================================================================
-GATEWAY_HOST=0.0.0.0
-GATEWAY_PORT=8080
+# MinIO Object Storage
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=discord_minio
+MINIO_SECRET_KEY=discord_minio_password
+MINIO_BUCKET=discord-uploads
 
 # JWT Configuration
-JWT_SECRET=your-secret-key-change-in-production-use-long-random-string
-JWT_EXPIRATION_HOURS=24
+JWT_SECRET=change-this-to-a-secure-random-string-in-production
+JWT_ACCESS_EXPIRY=3600
+JWT_REFRESH_EXPIRY=604800
 
-# =============================================================================
-# Simulation Configuration
-# =============================================================================
-# Number of vehicles to simulate
-NUM_VEHICLES=10
+# TURN/STUN Server
+TURN_URL=turn:localhost:3478
+TURN_USERNAME=discord
+TURN_PASSWORD=discord_turn_password
+STUN_URL=stun:localhost:3478
 
-# Update interval in milliseconds
-UPDATE_INTERVAL_MS=2000
+# Service Ports
+AUTH_SERVICE_PORT=8081
+USER_SERVICE_PORT=8082
+CHANNEL_SERVICE_PORT=8083
+CHAT_SERVICE_PORT=8084
+VOICE_SERVICE_PORT=8085
+STREAM_SERVICE_PORT=8086
+PRESENCE_SERVICE_PORT=8087
+GATEWAY_SERVICE_PORT=8080
+MEDIA_SERVER_PORT=8089
 
-# City center coordinates (default: Istanbul)
-CITY_CENTER_LAT=41.0082
-CITY_CENTER_LON=28.9784
+# Service URLs (for inter-service communication)
+AUTH_SERVICE_URL=http://localhost:8081
+USER_SERVICE_URL=http://localhost:8082
+CHANNEL_SERVICE_URL=http://localhost:8083
+CHAT_SERVICE_URL=http://localhost:8084
+VOICE_SERVICE_URL=http://localhost:8085
+STREAM_SERVICE_URL=http://localhost:8086
+PRESENCE_SERVICE_URL=http://localhost:8087
+MEDIA_SERVER_URL=http://localhost:8089
 
-# Simulation radius in kilometers
-CITY_RADIUS_KM=15.0
+# WebRTC Configuration
+RTC_MIN_PORT=50000
+RTC_MAX_PORT=60000
 
-# UDP target for telemetry
-UDP_TARGET=127.0.0.1:4000
+# Rate Limiting
+RATE_LIMIT_MESSAGES=10
+RATE_LIMIT_WINDOW=10
 
-# =============================================================================
-# Metrics & Observability
-# =============================================================================
-METRICS_PORT=9091
-ENABLE_TRACING=true
-TRACING_ENDPOINT=http://localhost:14268/api/traces
+# Media Server Configuration
+MAX_SESSIONS=1000
+ENABLE_RECORDING=false
+RECORDING_STORAGE=minio://localhost:9000
 
-# =============================================================================
-# Performance Tuning
-# =============================================================================
-# Database connection pool size
-DB_MAX_CONNECTIONS=10
-DB_MIN_CONNECTIONS=2
+# Presence Service
+HEARTBEAT_INTERVAL=30
+HEARTBEAT_TIMEOUT=45
+TYPING_TIMEOUT=10
 
-# NATS connection pool
-NATS_MAX_RECONNECTS=10
+# Stream Service
+MAX_STREAMS_PER_CHANNEL=5
+MAX_VIEWERS_PER_STREAM=50
 
-# Redis connection pool
-REDIS_POOL_SIZE=10
+# Logging
+RUST_LOG=info
+RUST_BACKTRACE=1
+
+# Production Settings (uncomment and configure for production)
+# TLS_CERT_PATH=/path/to/cert.pem
+# TLS_KEY_PATH=/path/to/key.pem
+# CORS_ORIGIN=https://yourdomain.com
+# SENTRY_DSN=https://your-sentry-dsn
