--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,84 +1,70 @@
 [workspace]
 resolver = "2"
 members = [
-  "crates/common",
-  "services/auth-service",
-  "services/location-processor",
-  "services/udp-ingestor",
-  "services/gateway",
-  "services/simulation",
+    "crates/common",
+    "crates/auth-service",
+    "crates/user-service",
+    "crates/channel-service",
+    "crates/chat-service",
+    "crates/voice-service",
+    "crates/stream-service",
+    "crates/presence-service",
+    "crates/gateway-service",
+    "crates/media-server",
 ]
 
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
-authors = ["Bulut Gocer <gocerbulutcan@gmail.com>"]
+authors = ["Your Name <your.email@example.com>"]
 license = "MIT"
+repository = "https://github.com/yourusername/discord-clone"
 
 [workspace.dependencies]
-# Async runtime
-tokio = { version = "1.40", features = ["full"] }
+# Async Runtime
+tokio = { version = "1.35", features = ["full"] }
+tokio-util = "0.7"
+
+# Web Framework
+axum = { version = "0.7", features = ["ws", "multipart"] }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# HTTP framework
-axum = { version = "0.8", features = ["macros"] }
-tower = "0.5"
-tower-http = { version = "0.6", features = ["cors", "trace"] }
-
 # Database
-sqlx = { version = "0.8", features = [
-  "runtime-tokio",
-  "tls-native-tls",
-  "postgres",
-  "uuid",
-  "chrono",
-  "json",
-] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
+redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
 
-# Cache
-redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
+# Message Queue
+async-nats = "0.33"
 
-# Event bus
-async-nats = "0.44"
+# WebRTC
+webrtc = "0.9"
 
-# Auth
-jsonwebtoken = "10"
-bcrypt = "0.17"
+# Authentication
+jsonwebtoken = "9.2"
+argon2 = "0.5"
 
-# Utilities
-uuid = { version = "1.0", features = ["v4", "serde"] }
+# UUID & Time
+uuid = { version = "1.6", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
-anyhow = "1.0"
-thiserror = "2.0"
 
-# Observability
+# Tracing & Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
-metrics = "0.24"
-metrics-exporter-prometheus = "0.17"
 
-# Testing
-mockall = { version = "0.13" }
-testcontainers = { version = "0.24.0", features = ["blocking"] }
-testcontainers-modules = { version = "0.12.0", features = ["postgres", "default"] }
-rand = "0.9"
+# Error Handling
+anyhow = "1.0"
+thiserror = "1.0"
 
-# Async trait
-async-trait = "0.1"
+# Environment
+dotenvy = "0.15"
 
-[profile.dev]
-opt-level = 0
-debug = true
+# Validation
+validator = { version = "0.18", features = ["derive"] }
 
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-strip = true
-
-[profile.test]
-opt-level = 0
-debug = true
+# HTTP Client
+reqwest = { version = "0.11", features = ["json"] }
