--- a/infra/prometheus/prometheus.yml
+++ b/infra/prometheus/prometheus.yml
@@ -1,46 +1,60 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
-  external_labels:
-    cluster: "hermes-local"
-    environment: "development"
-
-# Alertmanager configuration (optional)
-# alerting:
-#   alertmanagers:
-#     - static_configs:
-#         - targets: ['alertmanager:9093']
 
 scrape_configs:
-  # Prometheus self-monitoring
-  - job_name: "prometheus"
+  # NATS Monitoring
+  - job_name: 'nats'
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ['nats:8222']
 
-  # NATS monitoring
-  - job_name: "nats"
+  # Redis Exporter (add if needed)
+  - job_name: 'redis'
     static_configs:
-      - targets: ["nats:8222"]
+      - targets: ['redis:6379']
 
-  # PostgreSQL exporter (if added)
-  # - job_name: 'postgres'
-  #   static_configs:
-  #     - targets: ['postgres-exporter:9187']
+  # Application Services
+  - job_name: 'auth-service'
+    static_configs:
+      - targets: ['auth-service:9091']
+    metrics_path: '/metrics'
 
-  # Redis exporter (if added)
-  # - job_name: 'redis'
-  #   static_configs:
-  #     - targets: ['redis-exporter:9121']
+  - job_name: 'user-service'
+    static_configs:
+      - targets: ['user-service:9092']
+    metrics_path: '/metrics'
 
-  # Service endpoints (will be added in future sprints)
-  # - job_name: 'udp-ingestor'
-  #   static_configs:
-  #     - targets: ['udp-ingestor:9091']
+  - job_name: 'channel-service'
+    static_configs:
+      - targets: ['channel-service:9093']
+    metrics_path: '/metrics'
 
-  # - job_name: 'location-processor'
-  #   static_configs:
-  #     - targets: ['location-processor:9092']
+  - job_name: 'chat-service'
+    static_configs:
+      - targets: ['chat-service:9094']
+    metrics_path: '/metrics'
 
-  # - job_name: 'gateway'
-  #   static_configs:
-  #     - targets: ['gateway:9093']
+  - job_name: 'voice-service'
+    static_configs:
+      - targets: ['voice-service:9095']
+    metrics_path: '/metrics'
+
+  - job_name: 'stream-service'
+    static_configs:
+      - targets: ['stream-service:9096']
+    metrics_path: '/metrics'
+
+  - job_name: 'presence-service'
+    static_configs:
+      - targets: ['presence-service:9097']
+    metrics_path: '/metrics'
+
+  - job_name: 'gateway-service'
+    static_configs:
+      - targets: ['gateway-service:9098']
+    metrics_path: '/metrics'
+
+  - job_name: 'media-server'
+    static_configs:
+      - targets: ['media-server:9099']
+    metrics_path: '/metrics'
